fix(security): resolve 403 Forbidden by permitting OPTIONS and broadening CORS headers